Fix mobile layout issues

--- a/seatuationApp/client/main.css
+++ b/seatuationApp/client/main.css
@@ -2,7 +2,8 @@
 	text-align:center;
 	background-size: 100%;
 	font-family: Helvetica, sans-serif;
-	background-color: rgba(230,230,230,0.4)
+	background-color: rgba(230,230,230,0.4);
+	margin-bottom: 1.5vw;
 }
 
 body {
@@ -13,4 +14,15 @@ body {
 
 .bg {
 	background-color: rgba(255,255,255,0.3);
+}
+
+.appName{
+	font-size: 3vw;
+	margin-top: 10px;
+	margin-bottom: 5px;
+}
+
+.description{
+	font-size: 2vw;
+	margin-bottom: 5px;
 }
