--- a/seatuationApp/imports/ui/css/Library.css
+++ b/seatuationApp/imports/ui/css/Library.css
@@ -1,5 +1,6 @@
 .floorBtns{
 	cursor: pointer;
+	display: inline-block;
 }
 
 .libName{
