--- a/seatuationApp/imports/ui/css/Sidebar.css
+++ b/seatuationApp/imports/ui/css/Sidebar.css
@@ -1,28 +1,28 @@
 .taken{
-	height: 20px;
-	width: 20px;
+	height: 1.8vw;
+	width: 1.8vw;
 	background-color: red;
-	margin-right: 5px;
+	margin-right: 0.5vw;
 	border: 1px;
 	border-style: solid;
 	border-color: black;
 }
 
 .empty{
-	height: 20px;
-	width: 20px;
+	height: 1.8vw;
+	width: 1.8vw;
 	background-color: green;
-	margin-right: 5px;
+	margin-right: 0.5vw;
 	border: 1px;
 	border-style: solid;
 	border-color: black;
 }
 
 .tableMatch{
-	height: 20px;
-	width: 20px;
+	height: 1.8vw;
+	width: 1.8vw;
 	background-color: #fff196;
-	margin-right: 5px;
+	margin-right: 0.5vw;
 	border: 1px;
 	border-style: solid;
 	border-color: black;
@@ -47,19 +47,20 @@
 }
 
 .legend{
-	margin-bottom: 10px;
+	margin-bottom: 1vw;
 }
 
 .legendTitle{
 	font-size: 2vw;
 	margin-top: 0px;
+	margin-bottom: 1vw;
 }
 
 .legendSub{
-	font-size: 1vw;
+	font-size: 1.2vw;
 	display: inline-block;
 	position: relative;
-	bottom: 5px;
+	bottom: 0.5vw;
 }
 
 input[type=checkbox]{
